--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -1,18 +1,16 @@
 server {
     listen 80;
 
-    # Root directory for frontend static files
+    location /api/ {
+        proxy_pass ${BACKEND_URL};
+        proxy_ssl_server_name on;
+        proxy_read_timeout 2m;
+    }
+
     location / {
         root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy for backend API requests
-    location /api {
-        proxy_pass http://backend:8080/api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
 }
